--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ body {
 .lv1 {
   font-family: "Teko", sans-serif;
   font-weight: lighter;
-  font-size: 0.33em;
+  font-size: 1em;
+  margin-top: -10px;
   color: rgb(255, 255, 255);
   width: 100%;
   text-align: center;
