--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: black;
-  background-image: url(https://i.imgur.com/kgRsE2D.jpg);
+  background-image: url(https://i.imgur.com/1IrTeom.jpg);
   background-repeat: no-repeat;
   height: 100%;
   background-position: center;
