--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   background-repeat: no-repeat;
   height: 100%;
   background-position: center;
-  background-size: cover;
+  background-size: 100% 100%;
   overflow: hidden;
   margin: 0;
 }
