--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
   background-color: black;
-  background-image: url(https://i.imgur.com/1IrTeom.jpg);
+  background-image: url(https://i.imgur.com/kgRsE2D.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100% 100%;
+  height: 100%;
+  background-size: cover;
   overflow: hidden;
   margin: 0;
 }
