--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   background-color: black;
-  background-image: url(https://i.imgur.com/kgRsE2D.jpg);
+  /* background-image: url(https://i.imgur.com/kgRsE2D.jpg); */
   background-repeat: no-repeat;
-  background-position: center;
   height: 100%;
+  background-position: center;
   background-size: cover;
   overflow: hidden;
   margin: 0;
