--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: black;
-  /*   background-image: url(https://i.imgur.com/kgRsE2D.jpg); */
-  background-image: url(https://i.imgur.com/SPLqa6T.jpeg);
+    background-image: url(https://i.imgur.com/kgRsE2D.jpg);
+/*   background-image: url(https://i.imgur.com/SPLqa6T.jpeg); */
   background-repeat: no-repeat;
   height: 100%;
   background-position: center;
